# Livraria

./: .pdm-python  pyproject.toml
app/: settings.py  urls.py
core/: admin.py
core/migrations/: 0005_categoria.py  0006_editora.py  0007_autor.py  0008_livro_alter_autor_options.py  0009_livro_categoria_livro_editora.py  0010_livro_autores.py  0011_livro_capa.py
core/models/: autor.py  livro.py
core/serializers/: __init__.py  livro.py
core/views/: __init__.py  livro.py
